# capnez

./: Cargo.toml  README.md  justfile
.github/workflows/: build.yml
capnez/: Cargo.toml  build.rs
capnez-macros/: Cargo.toml
capnez-macros/src/: lib.rs
capnez/src/: client.rs  main.rs
capnp_derive/: Cargo.toml
capnp_derive/src/: lib.rs
capnp_export/: Cargo.toml
capnp_export/src/: lib.rs
capnp_macros/: Cargo.toml
capnp_macros/src/: lib.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs
example/: Cargo.toml
example/hello_world/: Cargo.toml  README.md  build.rs
example/serialize/: Cargo.toml  README.md  build.rs  person.capnp
example/serialize/src/: main.rs
example/sparse_matrix/: Cargo.toml  README.md
example/sparse_matrix/src/: entry.rs  main.rs  matrix.rs  multiply.rs
example/src/: client.rs  main.rs  server.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: client.rs  main.rs  server.rs
src/schema/: generated.capnp
