[workspace]
members = [
    "codegen",
    "example",
    "macros"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
anyhow = "1.0"
capnp = "0.21.0"
capnp-rpc = "0.21.0"
capnpc = "0.21.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
proc-macro2 = "1.0"