[package]
name = "capnez"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.21.0"
capnez-macros = { path = "../capnez-macros" }
capnp-rpc = "0.21.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

[build-dependencies]
codegen = { path = "../codegen" }
anyhow = "1.0" 