[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[lib]
name = "codegen"
path = "src/lib.rs"

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
walkdir = "2.4"
tempfile = "3.8"
capnpc = "0.21.0"
structopt = "0.3"