[package]
name = "capnez-example"
version.workspace = true
edition.workspace = true

[features]
default = ["serde"]
serde = []

[dependencies]
capnp.workspace = true
capnp-rpc.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
capnez-macros = { path = "../macros" }
capnez-codegen = { path = "../codegen" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
capnez-codegen = { path = "../codegen" }