[package]
name = "serialize"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = []

[dependencies]
capnez-macros = { path = "../../macros" }
capnez-codegen = { path = "../../codegen" }
capnp = { version = "0.21.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] } 

[build-dependencies]
capnez-codegen = { path = "../../codegen" }