[package]
name = "sparse_matrix"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
capnp = { workspace = true }
capnez-macros = { path = "../../macros" }
capnez-codegen = { path = "../../codegen" }
serde = { workspace = true }
serde_json = "1.0"

[build-dependencies]
capnez-codegen = { path = "../../codegen" }